# TurtleShot

./: .gitignore  BEHAVIOR_TREE_UPDATE.md  CLAUDE.md  CLAUDE_ADDENDUM.md  MIGRATION_GUIDE.md  Project.btproj  QUICKSTART.md  QUICKSTART_WSL2.md  README.md  SUMMARY.md  WSL2_TROUBLESHOOTING.md  cyclonedds.xml  launch_all.sh  launch_headless.sh  my_costmap.pgm  my_costmap.yaml  my_costmap_rotated.pgm  test_gazebo_fortress.sh  wait_for_nav2.sh
.claude/: settings.local.json
src/catapaf_bt/: CMakeLists.txt  README.md  package.xml
src/catapaf_bt/src/: bt_main.cpp
src/catapaf_description/: README.md  package.xml  setup.cfg  setup.py
src/catapaf_description/launch/: display.launch.py
src/catapaf_description/urdf/: catapaf.urdf.xacro  turtlebot_with_catapaf.urdf  turtlebot_with_catapaf_gz.urdf.xacro
src/catapaf_gazebo/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/catapaf_gazebo/behavior_trees/: patrol_and_interact.xml
src/catapaf_gazebo/catapaf_gazebo/: arm_controller.py  autonomous_explorer.py  ball_spawner.py  catapaf_arm_controller.py  odom_to_tf.py
src/catapaf_gazebo/config/: catapaf_bridge.yaml  patrol_waypoints.yaml
src/catapaf_gazebo/config/nav2/: explore_lite_params.yaml  nav2_params.yaml  nav2_params_no_map.yaml  nav2_params_slam.yaml  slam_params.yaml  slam_toolbox_params.yaml
src/catapaf_gazebo/launch/: exploration.launch.py  gz_simulation.launch.py  gz_simulation_headless.launch.py  hardware.launch.py  hardware_bringup.launch.py  localization.launch.py  navigation.launch.py  navigation_no_map.launch.py  navigation_slam.launch.py  simulation.launch.py
src/catapaf_gazebo/models/ball/: model.config  model.sdf
src/catapaf_gazebo/models/catapaf_common/: model.config
src/catapaf_gazebo/models/catapaf_common/meshes/catapaf/: collider_godet.stl
src/catapaf_gazebo/models/trash_bin/: model.config  model.sdf
src/catapaf_gazebo/models/trash_bin/meshes/: trash_bin.stl
src/catapaf_gazebo/models/turtlebot3_world/: model.sdf
src/catapaf_gazebo/models/turtlebot_catapaf/: model.config  model.sdf
src/catapaf_gazebo/rviz/: tb3_gazebo.rviz
src/catapaf_gazebo/urdf/: turtlebot_catapaf.urdf  turtlebot_catapaf.urdf.xacro  turtlebot_catapaf_simple.urdf
src/catapaf_gazebo/worlds/: Ubiquarium.world  empty.sdf  poubelle.jpgZone.Identifier  turtlebot3_world.world  turtlebot_world.sdf
src/catapaf_interfaces/: CMakeLists.txt  README.md  package.xml
src/catapaf_interfaces/srv/: GetDetection.srv  GetRandomGoal.srv
src/distance_to_pwm/: README.md  package.xml  setup.cfg  setup.py
src/distance_to_pwm/distance_to_pwm/: converter.py
src/distance_to_pwm/launch/: converter.launch.py
src/fake_lidar/: package.xml  setup.py
src/fake_lidar/fake_lidar/: fake_lidar.py  scene_publisher.py
src/inference_ia_camera/: README.md  package.xml  setup.cfg  setup.py
src/inference_ia_camera/config/: yolo_seg.json
src/inference_ia_camera/inference_ia_camera/: inference_ia_camera_node.py
src/oakd_camera_driver/: package.xml  setup.cfg  setup.py
src/oakd_camera_driver/launch/: camera.launch.py
src/oakd_camera_driver/oakd_camera_driver/: camera_publisher.py  imu_tf_publisher.py
src/py_listener/: setup.py
src/py_listener/install/: local_setup.sh  setup.sh
src/py_listener/launch/: listener_with_foxglove_launch.py
src/py_listener/log/: latest_build
src/py_listener/py_listener/: listener.py
src/py_talker/: package.xml  setup.py
src/py_talker/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/py_talker/launch/: talker_with_foxglove_launch.py
src/py_talker/log/: latest_build
src/py_talker/py_talker/: talker.py
src/robot_gazebo_sim/: package.xml  setup.cfg  setup.py
src/robot_gazebo_sim/launch/: gazebo_wsl.launch.py
src/robot_gazebo_sim/robot_gazebo_sim/: random_walker.py
src/robot_gazebo_sim/urdf/: turtlebot3_burger.urdf  turtlebot_with_catapaf.urdf
src/robot_gazebo_sim/worlds/: turtlebot3_world.world
src/robot_sim/: package.xml  setup.py
src/robot_sim/launch/: robot_with_camera.launch.py  simulation.launch.py
src/robot_sim/robot_sim/: simple_robot_simulator.py
src/robot_sim/urdf/: turtlebot3_burger_simple.urdf
src/turtleshot_bt/: CMakeLists.txt  GROOT2_GUIDE.md  QUICK_START.md  README.md  package.xml
src/turtleshot_bt/include/turtleshot_bt/actions/: fire_catapult_action.hpp  navigate_to_pose_action.hpp
src/turtleshot_bt/include/turtleshot_bt/conditions/: has_target_condition.hpp  target_in_range_condition.hpp
src/turtleshot_bt/include/turtleshot_bt/decorators/: retry_decorator.hpp
src/turtleshot_bt/launch/: full_mission.launch.py  turtleshot_bringup.launch.py
src/turtleshot_bt/scripts/: mock_catapult_service.py  mock_nav_server.py
src/turtleshot_bt/src/: turtleshot_bt_node.cpp
src/turtleshot_bt/src/actions/: fire_catapult_action.cpp  navigate_to_pose_action.cpp
src/turtleshot_bt/src/conditions/: has_target_condition.cpp  target_in_range_condition.cpp
src/turtleshot_bt/trees/: mission_with_retry.xml  test_simple.xml  turtleshot_mission.xml
src/video_to_ai/: README.md  package.xml  setup.cfg  setup.py
src/video_to_ai/models/: best (1).ptZone.Identifier  yolo_best.pt:Zone.Identifier
src/video_to_ai/video_to_ai/: fake_oak_publisher.py  requirements.txt  video_inference_node.py
src/yolo_oak_driver/: README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/yolo_oak_driver/helpers/: config.json
(+12 files in other folders)
