<?xml version="1.0"?>
<package format="3">
  <name>catapaf_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo simulation for TurtleShot robot</description>

  <maintainer email="clement@example.com">Clément</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_image</exec_depend>
  <exec_depend>ros_gz_point_cloud</exec_depend>
  <exec_depend>ros_gz_interfaces</exec_depend>

  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
